<resources>
    <string name="app_name">Preferències</string>
    <string name="btn_preferencies">Mostrar Preferències</string>
    <string name="pref_titol_dades_personals">Dades Personals</string>
    <string name="pref_titol_altres_dades">Altres dades</string>

    <string name="pref_email">E-mail</string>
    <string name="pref_sum_email">Escriu el teu email</string>

    <string name="pref_rebre_notificacions">Rebre notificacions</string>
    <string name="pref_backgroung_color">Color de fons</string>
    <string name="etiqueta_si">Sí</string>
    <string name="etiqueta_no">No</string>
</resources>
